fix: Update middleware to restrict from cookies to tokens
