# middleware/restrict.js
@@ -5,31 +5,34 @@ const prisma = new PrismaClient();
 
 module.exports = {
   restrict: (req, res, next) => {
-    let { token } = req.cookies;
-
     if (req.originalUrl === "/api/v1/auth/halaman-utama") {
       return next();
     }
-    if (!token) {
+
+    let { authorization } = req.headers;
+    if (!authorization || !authorization.split(" ")[1]) {
       return res.status(401).json({
         status: false,
-        message: "Tidak diizinkan",
-        err: "Token tidak ditemukan pada header!",
+        message: "token tidak ada!",
         data: null,
       });
     }
 
-    jwt.verify(token, JWT_SECRET, async (err, decoded) => {
+    let token = authorization.split(" ")[1];
+    jwt.verify(token, JWT_SECRET, async (err, data) => {
       if (err) {
         return res.status(401).json({
           status: false,
-          message: "Tidak diizinkan",
-          err: err.message,
+          message: err.message,
           data: null,
         });
       }
 
-      req.user = await prisma.user.findUnique({ where: { id: decoded.id } });
+      let user = await prisma.user.findFirst({
+        where: { id: data.id },
+      });
+      delete user.password;
+      req.user = user;
       next();
     });
   },
